--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,12 @@
 </head>
 
 <body>
-    <h1>Página del post</h1>
+    <div id=container>
+        <div id=post>
+            <h1>Este es el título atractivo e intereste del post</h1>
+            <p>Este es elpárrafo donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+        </div>
+    </div>
 </body>
 
 </html>
