--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,9 @@
 
 <body>
     <div id=container>
+        <div id=cabecera>
+            Cabecera
+        </div>
         <div id=post>
             <h1>Este es el título atractivo e intereste del post</h1>
             <p>Este es elpárrafo donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
