--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,8 @@
 <body>
     <div id=container>
         <div id=cabecera>
-            Cabecera
+            Blog
+            <span id="tagline">Tu blog de confianza</span>
         </div>
         <div id=post>
             <h1>Este es el título atractivo e intereste del post</h1>
