--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
     <div id=container>
         <div id=cabecera>
             Blog
-            <span id="tagline">Tu blog de confianza</span>
+            <span id="tagline">Nuestro blog de confianza</span>
         </div>
         <div id=post>
             <h1>Este es el título atractivo e intereste del post</h1>
