--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,7 @@
             <h1>Este es el título atractivo e intereste del post</h1>
             <p>Este es el párrafo donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
             <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho más que ir a conferencias o salir en Youtube</p>
-            <p>suscríbete y dale like</p>
+            <p>Suscríbete y dale like</p>
         </div>
     </div>
 </body>
