--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Título</title>
+    <title>Bienvenido al blog</title>
     <link href="css/estilos.css" rel="stylesheet" />
 </head>
 
