--- a/blog.html
+++ b/blog.html
@@ -13,6 +13,7 @@
         </div>
         <div id=post>
             <h1>Este es el título atractivo e intereste del post</h1>
+            <p><img src="imagenes/aguila.jpg" width="100%" /></p>
             <p>Este es el párrafo donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
             <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho más que ir a conferencias o salir en Youtube</p>
             <p>Suscríbete y dale like</p>
